--- a/main.css
+++ b/main.css
@@ -23,8 +23,8 @@ canvas {
     border: 2px solid #fff;
     margin-top: 10px;
     border-radius: 5px;
-    max-width: 100%; /* Добавлено */
-    max-height: 100%; /* Добавлено */
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .custom-file-upload {
